# tintin

./: .gitmodules  README.md
artifact-evaluation/docs/: code-mapping.md  navigation-guide.md  opportunities.md  paper.md  shared-machine-guide.md
paper-source/: .gitmodules
paper-source/tintin-kernel/: .config  .gitignore  README.md
paper-source/tintin-kernel/certs/: extract-cert
paper-source/tintin-kernel/drivers/edac/: stxylrD9
paper-source/tintin-kernel/include/linux/: perf_event.h  syscalls.h  tintin_event.h  tintin_vector.h
paper-source/tintin-kernel/kernel/events/: Makefile  (+22 more)
paper-source/tintin-user/: CMakeLists.txt  README.md  REPRODUCE.md
paper-source/tintin-user/include/: tintin-runtime.cpp  tintin-utils.h
paper-source/tintin-user/lib/: macros.h  wrapper.c
paper-source/tintin-user/perf-prelim/: .gitignore  perflist.py  readme.md  sixteen.txt  statwriter.py  targetevent.py  workloads.txt
paper-source/tintin-user/plots/: figure-10_pond_study.py  figure-13_plot_accuracy_bar.py  figure-14_plot_overhead_bar.py  figure-15-a_sched_hyperperiod_accuracy.py  figure-15-b_sched_hyperperiod_overhead.py  figure-16-a_sched_quantum.py  figure-16-b_num_events.py  plot_examiniation.py  results.txt
paper-source/tintin-user/tests/: CMakeLists.txt  dummy_task.c  no_perf_toy_example.c  pin_two_events_native.c  pin_two_events_tintin.c  pond_model_events.c  pond_model_events_uncertainty.c  pond_model_events_uncertainty_weights.c  test_events_removements.c  test_syscall.c  test_weight_assignement.c  toy_example.c  toy_example_without_mux.c  toy_one_event_example.c
(+1612 files in other folders)
